css/index.css
/* ... */
/* End animation */
/* Start Media Q */
@media screen and (max-width: 600px) {
    header {
        padding: 0 !important;
    }

    .theme-btn {
        width: 50px;
        height: 50px;
    }

    .header-content {
        grid-template-columns: repeat(1, 1fr);
        padding-bottom: 6rem;
    }

    .left-header .h-shape {
        display: none;
    }

    .right-header {
        grid-row: 1;
        padding-right: 0rem !important;
        width: 90%;
        margin: 0 auto;
    }

    .right-header .name {
        font-size: 2.5rem !important;
        text-align: center;
        padding-top: 3rem;
    }

    .header-content .left-header .image {
        margin: 0 auto;
        width: 90%;
    }

    .controls {
        top: auto;
        bottom: 0;
        flex-direction: row;
        justify-content: center;
        left: 50%;
        transform: translateX(-50%);
        width: 100%;
        background-color: var(--color-grey-5);
    }

    .controls .control {
        margin: 1rem 0.3rem;
    }

    .about-container {
        grid-template-columns: repeat(1, 1fr);
    }

    .about-container .right-about {
        grid-template-columns: repeat(1, 1fr);
        padding-top: 2.5rem;
    }

    .about-container .left-about {
        padding-right: 0;
    }

    .about-container .left-about p {
        padding-left: 0;
    }

    .section {
        padding: 2rem 1.5rem !important;
    }

    .timeline {
        grid-template-columns: repeat(1, 1fr);
        padding-bottom: 6rem;
    }

    .container {
        padding: 2rem 2.5rem !important;
    }

    .about-stats .progress-bars {
        grid-template-columns: repeat(1, 1fr);
    }

    .portfolios {
        grid-template-columns: repeat(1, 1fr);
        padding-bottom: 6rem;
        margin-top: 1rem;
    }

    .blogs {
        grid-template-columns: repeat(1, 1fr) !important;
        padding-bottom: 6rem;
    }

    .contact-content-con {
        flex-direction: row;
    }

    .contact-content-con .right-contact {
        margin-left: 0;
        margin-top: 2.5rem;
    }

    .contact-content-con .right-contact .i-c-2 {
        flex-direction: column;
    }

    .contact-content-con .right-contact .i-c-2 :last-child {
        margin-left: 0 !important;
        margin-top: 1.5rem;
    }

    .contact-content-con .right-contact {
        margin-bottom: 6rem;
    }

    .contact-item {
        flex-direction: row;
        margin: 1rem 0;
    }

    .contact-item p {
        font-size: 15px;
        color: var(--color-grey-2);
    }

    .contact-item span {
        font-size: 15px;
    }

    .contact-item .icon {
        grid-template-columns: 25px 1fr;
    }

    .main-title h2 {
        font-size: 2rem;
    }

    .main-title h2 span {
        font-size: 2rem;
    }

    .main-title h2 .bg-text {
        font-size: 4rem !important;
    }
}

@media screen and (max-width: 500px) {

    .about-info-content {
        grid-template-columns: 1fr;
        gap: 2rem;
    }

    .about-info-content .left-about {
        padding-right: 0;
    }

    .about-info-content .left-about h4 {
        font-size: 1.4rem;
        text-align: center;
    }

    .about-info-content .left-about p {
        font-size: 1rem;
        line-height: 1.7rem;
        text-align: left;
    }

    .about-info-content .right-about {
        grid-template-columns: 1fr;
        gap: 1.5rem;
    }

    .about-item .abt-text {
        padding: 1.2rem;
        align-items: center;
        text-align: center;
    }

    .about-item .abt-text .large-text {
        font-size: 2rem;
    }

    .about-item .abt-text .small-text {
        font-size: 0.8rem;
        letter-spacing: 1px;
    }
}

@media screen and (max-width: 1432px) {
    header {
        padding: 0 !important;
    }

    .section {
        padding: 2rem 8rem;
    }

    .contact-content-con {
        flex-direction: row;
        gap: 20px;
    }

    .contact-content-con .right-contact {
        margin-left: 0 !important;
        margin-top: 2.5rem;
    }

    .contact-content-con .right-contact .i-c-2 {
        flex-direction: column;
    }

    .contact-content-con .right-contact .i-c-2 :last-child {
        margin-left: 0 !important;
        margin-top: 1.5rem;
    }

    .contact-content-con .right-contact {
        margin-bottom: 6rem;
    }

    .main-title h2 .bg-text {
        font-size: 5.5rem;
    }
}

@media screen and (max-width: 1250px) {
    .blogs {
        grid-template-columns: repeat(2, 1fr);
        margin-top: 6rem;
    }

    .portfolios {
        grid-template-columns: repeat(2, 1fr);
    }

    .header-content .right-header {
        padding-right: 9rem;
    }
}

@media screen and (max-width: 660px) {
    .blogs {
        grid-template-columns: repeat(1, 1fr);
    }

    .portfolios {
        grid-template-columns: repeat(1, 1fr);
    }
}

@media screen and (max-width: 1070px) {
    .about-container {
        grid-template-columns: repeat(1, 1fr);
    }

    .about-container .right-about {
        padding-top: 2.5rem;
    }

    .main-title h2 {
        font-size: 4rem;
    }

    .main-title h2 span {
        font-size: 4rem;
    }

    .main-title h2 .bg-text {
        font-size: 4.5rem;
    }

    .blogs {
        grid-template-columns: repeat(2, 2fr) !important;
    }
}

@media screen and (max-width: 970px) {
    .section {
        padding: 2rem 4rem;
    }

    .about-container .left-about {
        padding-right: 0rem;
    }

    .header-content {
        grid-template-columns: repeat(1, 1fr);
        padding-bottom: 6rem;
    }

    .left-header .h-shape {
        display: none;
    }

    .left-header .image {
        width: 90% !important;
        margin: 0 auto !important;
    }

    .right-header {
        grid-row: 1;
        padding-right: 0rem !important;
        width: 90%;
        margin: 0 auto;
    }

    .right-header .name {
        font-size: 2.5rem !important;
        text-align: center;
        padding-top: 3rem;
    }
}
/* ... */

